<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView style="@style/QuizCard">

            <RadioGroup
                android:id="@+id/quiz_1"
                style="@style/QuizLayout">

                <TextView
                    style="@style/QuizText"
                    android:text="@string/quiz_1" />

                <RadioButton
                    android:id="@+id/quiz_1_russia"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_1_choice_1" />

                <RadioButton
                    android:id="@+id/quiz_1_usa"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_1_choice_2" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/QuizCard">

            <RadioGroup
                android:id="@+id/quiz_2"
                style="@style/QuizLayout">

                <TextView
                    style="@style/QuizText"
                    android:text="@string/quiz_2" />

                <RadioButton
                    android:id="@+id/quiz_2_japan"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_2_choice_1" />

                <RadioButton
                    android:id="@+id/quiz_2_china"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_2_choice_2" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/QuizCard">

            <LinearLayout
                style="@style/QuizLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/QuizText"
                    android:text="@string/quiz_3" />

                <CheckBox
                    android:id="@+id/quiz_3_sf"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_3_choice_1" />

                <CheckBox
                    android:id="@+id/quiz_3_ny"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_3_choice_2" />

                <CheckBox
                    android:id="@+id/quiz_3_la"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_3_choice_3" />

                <CheckBox
                    android:id="@+id/quiz_3_miami"
                    style="@style/ChoiceText"
                    android:text="@string/quiz_3_choice_4" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/QuizCard">

            <LinearLayout
                style="@style/QuizLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/QuizText"
                    android:text="@string/quiz_4" />

                <EditText
                    android:id="@+id/quiz_4_input"
                    style="@style/EntryBox" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            style="@style/SubmitBtn"
            android:onClick="onSubmit"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>